Fix SonarCloud code smells: use Stream.toList, Collection.forEach, WindowConstants.EXIT_ON_CLOSE (section 15.2)